samples/_failures_safe/1761441102_04a61b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5c590697.c: In function ‘event_to_string’:
./samples/SAFE/__tmp_5c590697.c:139:48: error: expected ‘]’ at end of input
  139 |     if (event < EVENT_COUNT) return names[event
      |                                                ^
      |                                                ]
./samples/SAFE/__tmp_5c590697.c:139:5: error: expected declaration or statement at end of input
  139 |     if (event < EVENT_COUNT) return names[event
      |     ^~
